authbind (1.1.6) unstable; urgency=low

  * Do not Build-Depends: libc6-dev (it's build-essential).
  * manpage: fix subtle error in description of interaction between
    set-id and LD_PRELOAD.  Closes #36890.
  * Say in manpage that we may not work properly with multithreaded
    programs.  See also Bug#186439.

 --

authbind (1.1.5.3) unstable; urgency=low

  * Moved man pages to /usr/share/man and docs to
    /usr/share/doc/authbind. Added a prerm and a postinst script to set
    the /usr/doc/authbind link. (closes: #91112, #91376, #91387)
  * Fixed the path to the common licenses in debian/copyright
  * Added a section and priority field to the changelog
  * Added support for the `nostrip' and `debug' options in
    DEB_BUILD_OPTIONS.
  * Boosted Standards-Version to 3.5.2

 -- Bas Zoetekouw <bas@debian.org>  Sun, 13 May 2001 18:00:52 +0200

authbind (1.1.5.2) frozen unstable; urgency=low

  * Non-maintainer upload.
  * Makefile: Add -D_GNU_SOURCE, closes: 89944

 -- Stephen Frost <sfrost@debian.org>  Fri, 16 Mar 2001 19:42:05 -0500

authbind (1.1.5.1) frozen unstable; urgency=low

  * Non-maintainer upload.
  * debian/rules (clean): use tab not spaces, so `debian/rules clean'
    actually works. [#27360]
  * debian/rules (binary-arch): don't compress the copyright file.
  * Makefile: install the shared library non-executable.
 
 -- James Troup <james@nocrew.org>  Sun,  3 Jan 1999 21:23:50 +0000

authbind (1.1.5) unstable; urgency=low

  * Fix coredump bug !

 -- Ian Jackson <ian@davenant.greenend.org.uk>  Mon, 31 Aug 1998 15:32:44 +0100

authbind (1.1.4) unstable; urgency=low

  * Allow bind() to port 0 !

 -- Ian Jackson <ian@davenant.greenend.org.uk>  Mon, 31 Aug 1998 15:23:30 +0100

authbind (1.1.3) unstable; urgency=low

  * Make IPPORT_RESERVED check work (oops!).

 -- Ian Jackson <ian@davenant.greenend.org.uk>  Sun, 30 Aug 1998 20:52:10 +0100

authbind (1.1.2) unstable; urgency=low

  * Make --deep option actually work (oops).
